# markov-switching-multifractal

./: msm.ipynb  msm_notebook.py  pyproject.toml  simulatedata.py
