[tool.poetry]
name = "markov-switching-multifractal"
version = "0.1.0"
description = ""
authors = ["Orpheus <orpheus@mampang.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
jupytext = "^1.16.4"
epc = "^0.0.5"
importmagic = "^0.1.7"
ipython = "^8.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
